新增文件读写，主页修改个人信息可添加头像